force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Asset_in_Deal__c.field-meta.xml
<CustomField>
    <fullName>pro_Asset_in_Deal__c</fullName>
    <label>Asset in Deal</label>
    <referenceTo>leaseworks__Aircraft_Proposal__c</referenceTo>
    <relationshipLabel>Checklist Items</relationshipLabel>
    <relationshipName>Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>