force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Category__c.field-meta.xml
<CustomField>
    <fullName>pro_Category__c</fullName>
    <description>AB 03/03/2026 - Prodigy: Section/category grouping. Aligns to checklist section headers from the source templates.</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approvals</fullName>
            </value>
            <value>
                <fullName>Jurisdiction</fullName>
            </value>
            <value>
                <fullName>Entity Considerations</fullName>
            </value>
            <value>
                <fullName>Ferry Flight / Registration Requirements</fullName>
            </value>
            <value>
                <fullName>Finance (Letter of Credit)</fullName>
            </value>
            <value>
                <fullName>Financing Requirements</fullName>
            </value>
            <value>
                <fullName>Post-Closing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>