force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Comment_Notes__c.field-meta.xml
<CustomField>
    <fullName>pro_Comment_Notes__c</fullName>
    <label>Comment / Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>