force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>