force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Completion_Fields__c.field-meta.xml
<CustomField>
    <fullName>pro_Completion_Fields__c</fullName>
    <label>Completion Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>