force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Document_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>pro_Document_Action_Required__c</fullName>
    <description>AB 03/03/2026 - Prodigy: Description of the document or action required. Populated from CMDT template on auto-creation; editable by user for ad-hoc items.</description>
    <label>Document/Action Required</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>