force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Documentation_Tab_Field__c.field-meta.xml
<CustomField>
    <fullName>pro_Documentation_Tab_Field__c</fullName>
    <label>Documentation Tab Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>