force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Is_Autogenerated__c.field-meta.xml
<CustomField>
    <fullName>pro_Is_Autogenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AB 03/03/2026 - Prodigy: Indicates this item was manually added, not auto-generated from a template.</description>
    <label>Is Autogenerated</label>
    <type>Checkbox</type>
</CustomField>