force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Key_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Key_Date__c</fullName>
    <label>Key Date</label>
    <type>Date</type>
</CustomField>