force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_LoC_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>pro_LoC_Action_Required__c</fullName>
    <label>LoC Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>