force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Moveable_to_Post_Closing__c.field-meta.xml
<CustomField>
    <fullName>pro_Moveable_to_Post_Closing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moveable to Post-Closing</label>
    <type>Checkbox</type>
</CustomField>