force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Necessary__c.field-meta.xml
<CustomField>
    <fullName>pro_Necessary__c</fullName>
    <label>Necessary</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>