force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Phase__c.field-meta.xml
<CustomField>
    <fullName>pro_Phase__c</fullName>
    <description>AB 03/03/2036 - Prodigy: Whether this is a pre-closing or post-closing checklist item. Drives separate percentage completion calculations</description>
    <label>Phase</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Closing</fullName>
            </value>
            <value>
                <fullName>Post-Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>