force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>pro_Provided_By__c</fullName>
    <description>Identifies which party is responsible for providing an item</description>
    <label>Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operator</fullName>
            </value>
            <value>
                <fullName>Carlyle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>