force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Repsonsibility__c.field-meta.xml
<CustomField>
    <fullName>pro_Repsonsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AB 03/03/2026 - Prodigy : The user responsible for completing this item. Supports bulk assignment.</description>
    <label>Repsonsibility</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>