force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>pro_Responsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsibility</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Checklist Items (Responsibility)</relationshipLabel>
    <relationshipName>Checklist_Items_Responsibility</relationshipName>
    <type>Lookup</type>
</CustomField>