force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>pro_Sort_Order__c</fullName>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>