force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Source_Template__c.field-meta.xml
<CustomField>
    <fullName>pro_Source_Template__c</fullName>
    <description>DeveloperName of the CMDT template that generated this checklist item. Used to link items back to their template for conditional dependency logic.</description>
    <label>Source Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>