force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Status__c.field-meta.xml
<CustomField>
    <fullName>pro_Status__c</fullName>
    <description>AB 03/03/2026 - Prodigy: Current status. Transition to &quot;Completed&quot; triggers Documentation Tab population and percentage recalculation.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>