force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Text_Input__c.field-meta.xml
<CustomField>
    <fullName>pro_Text_Input__c</fullName>
    <description>Input text which user may be prompted to populate upon setting a checklist item to done.</description>
    <label>Text Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>