force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Title__c.field-meta.xml
<CustomField>
    <fullName>pro_Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>