force-app/main/default/objects/pro_Checklist_Item__c/fields/pro_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>pro_Yes_No__c</fullName>
    <description>Picklist to capture a Yes / No value opon close of a checklist item.</description>
    <label>Yes / No</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>