force-app/main/default/objects/pro_Checklist_Item__c/validationRules/Comment_Required_on_not_Necessary.validationRule-meta.xml
<ValidationRule>
    <fullName>Comment_Required_on_not_Necessary</fullName>
    <active>true</active>
    <description>Ab 03/03/2026 - Prodigy</description>
    <errorConditionFormula>AND(
    ISPICKVAL(pro_Necessary__c, &quot;No&quot;),
    ISBLANK(pro_Comment_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>pro_Comment_Notes__c</errorDisplayField>
    <errorMessage>A comment is required when marking an item as not necessary. Please provide a justification.</errorMessage>
</ValidationRule>