force-app/main/default/objects/pro_Checklist_Item__c/validationRules/pro_Completion_Key_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pro_Completion_Key_Date_Required</fullName>
    <active>true</active>
    <description>Prevents completing an item when Key Date is configured as a required completion field but has not been populated.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(pro_Status__c, &quot;Completed&quot;),
  CONTAINS(pro_Completion_Fields__c, &quot;pro_Key_Date__c&quot;),
  ISBLANK(pro_Key_Date__c)
)</errorConditionFormula>
    <errorDisplayField>pro_Key_Date__c</errorDisplayField>
    <errorMessage>Date is required to complete this item.</errorMessage>
</ValidationRule>