force-app/main/default/objects/pro_Checklist_Item__c/validationRules/pro_Completion_LoC_Action_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pro_Completion_LoC_Action_Required</fullName>
    <active>true</active>
    <description>Prevents completing an item when LoC Action Required is configured as a required completion field but has not been populated.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(pro_Status__c, &quot;Completed&quot;),
  CONTAINS(pro_Completion_Fields__c, &quot;pro_LoC_Action_Required__c&quot;),
  ISBLANK(TEXT(pro_LoC_Action_Required__c))
)</errorConditionFormula>
    <errorDisplayField>pro_LoC_Action_Required__c</errorDisplayField>
    <errorMessage>LoC Action Required is required to complete this item.</errorMessage>
</ValidationRule>