force-app/main/default/objects/pro_Checklist_Item__c/validationRules/pro_Completion_Text_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pro_Completion_Text_Required</fullName>
    <active>true</active>
    <description>Prevents completing an item when Text Input is configured as a required completion field but has not been populated.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(pro_Status__c, &quot;Completed&quot;),
  CONTAINS(pro_Completion_Fields__c, &quot;pro_Text_Input__c&quot;),
  ISBLANK(pro_Text_Input__c)
)</errorConditionFormula>
    <errorDisplayField>pro_Text_Input__c</errorDisplayField>
    <errorMessage>Text Input is required to complete this item.</errorMessage>
</ValidationRule>