force-app/main/default/objects/pro_Checklist_Item__c/validationRules/pro_Completion_Yes_No_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>pro_Completion_Yes_No_Required</fullName>
    <active>true</active>
    <description>Prevents completing an item when Yes/No is configured as a required completion field but has not been populated.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(pro_Status__c, &quot;Completed&quot;),
  CONTAINS(pro_Completion_Fields__c, &quot;pro_Yes_No__c&quot;),
  ISBLANK(TEXT(pro_Yes_No__c))
)</errorConditionFormula>
    <errorDisplayField>pro_Yes_No__c</errorDisplayField>
    <errorMessage>Yes/No is required to complete this item.</errorMessage>
</ValidationRule>